--- a/kwitter_room.html
+++ b/kwitter_room.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div class="container">
-<button id="logout" class="glyphicon glyphicon-log-out btn btn-link" style="background-color: rgb(156, 70, 70); border-radius: 20px;">Logout</button>
+<button id="logout" class="glyphicon glyphicon-log-out btn btn-link" style="background-color: rgb(156, 70, 70); border-radius: 20px;" onclick="logout()">Logout</button>
 	<center>
 		<h1 class="header">	
 			Chat Box
